Revert "fix scrollbar"
This reverts commit 5276a777cade023ba9015a0e969c2eba8027f87d.

--- a/Launcher/app/app.global.scss
+++ b/Launcher/app/app.global.scss
@@ -10,10 +10,6 @@ body {
   background-color: $background-dark;
 }
 
-::-webkit-scrollbar { 
-  display: none; 
-}
-
 .grid-list {
   display: grid;
   grid-gap: 1em 1em;
